--- a/cmd/web/error_pages/ErrorPage404.templ
+++ b/cmd/web/error_pages/ErrorPage404.templ
@@ -1,5 +1,10 @@
 package error_pages
 
 templ ErrorPage404() {
-	<h1>Not Found</h1>
+	<div class="max-w-screen-lg mx-auto items-start flex flex-col mb-10">
+		<article class="prose prose-sm lg:prose-h1:text-5xl lg:prose-h2:text-4xl lg:prose-h3:text-3xl md:text-sm md:prose-base w-full max-w-4xl grow pt-10">
+			<h1>Error 404 - Not Found 🛠️</h1>
+            <span>The page you looking for was not found 😕</span>
+		</article>
+	</div>
 }
