--- a/cmd/web/progress/on_track_identificator.templ
+++ b/cmd/web/progress/on_track_identificator.templ
@@ -14,7 +14,7 @@ templ TrackingButton(bookid uint, completed bool) {
 			if completed {
 				✅ finished
 			} else {
-				👀 in progress
+				👀 tracking
 			}
 		</button>
 	</div>
