--- a/cmd/web/progress/statistics.templ
+++ b/cmd/web/progress/statistics.templ
@@ -101,9 +101,9 @@ templ ProgressStatistics(readingProgress *models.ReadingProgress) {
 }
 
 templ DailyProgressLogs(dailyLogs []models.DailyProgressLog) {
-	<div class="flow-auto flex items-center justify-center h-30">
+	<div class="flow-auto flex items-center h-30 sm:justify-start">
 		<div class="w-[70rem] overflow-x-auto flex items-center justify-center">
-			<ul class="steps">
+			<ul class="steps steps-vertical sm:steps-horizontal">
 				for _, dailyLog := range dailyLogs {
 					@ProgressStep(dailyLog)
 				}
