--- a/cmd/web/progress/on_track_identificator.templ
+++ b/cmd/web/progress/on_track_identificator.templ
@@ -9,7 +9,7 @@ templ TrackingButton(bookid uint, completed bool) {
 			hx-target="#content-container"
 			hx-swap="innerHTML transition:true"
             hx-push-url="true"
-			class="btn btn-neutral btn-outline"
+			class="btn btn-neutral btn-outline w-[8rem]"
 		>
 			if completed {
 				✅ finished
