--- a/cmd/web/progress/progress_step.templ
+++ b/cmd/web/progress/progress_step.templ
@@ -23,6 +23,7 @@ func NewProgressStep() *progressStep {
 	}
 }
 
+// TODO: if user finishes before end date, what should we do with the future logs?
 templ ProgressStep(log models.DailyProgressLog) {
 	{{ stepAtributes := NewProgressStep() }}
 	if log.Date.Equal(time.Now().Truncate(24 * time.Hour)) {
