--- a/cmd/web/user_books/list.templ
+++ b/cmd/web/user_books/list.templ
@@ -109,7 +109,7 @@ templ BooksTableRows(books []*models.UserBook) {
 							hx-swap="innerHTML"
 							hx-trigger="click"
 							onclick="my_modal_1.showModal()"
-							class="w-full btn btn-neutral btn-outline"
+							class="btn btn-neutral btn-outline w-[8rem]"
 						>Start</button>
 					}
 				</div>
